feat(security): Implement JWT key rotation, CSRF protection, and rate limiting
- Fixed MapStruct compilation issues
- Added security logging implementation
- Updated DEVBOOK with security tasks status
- Reorganized security documentation